--- a/BundleReducer.ipynb
+++ b/BundleReducer.ipynb
@@ -67,11 +67,11 @@
     "        ax.plot(mean);\n",
     "        ax.plot(data_mean)\n",
     "        \n",
-    "    def reconstruction_error(self, X): \n",
-    "        [x, H] = fit(self, X);\n",
-    "        data_imp = imputer.fit_transform(X);\n",
+    "    def reconstruction_error(self): \n",
+    "#         [x, H] = fit(self, X);\n",
+    "#         data_imp = imputer.fit_transform(X);\n",
     "        for i in len(X):\n",
-    "            loss = np.sqrt(np.mean(((x[i, :]@H)-data_imp[i, :])**2))\n",
+    "            loss = np.sqrt(np.mean(((self.model[i, :]@self.components)-self.data_imp_[i, :])**2))\n",
     "        return loss\n",
     "        # XXX \n",
     "        "
@@ -103,7 +103,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dki_fa = data.X[:, 0:1800]"
+    "dki_fa = data.X[:, 0:1800]\n",
+    "dki_md = data.X[:, 1801:3600]\n",
+    "dti_fa = data.X[:, 0:1800]\n",
+    "dki_md = data.X[:, 1801:3600]"
    ]
   },
   {
@@ -166,13 +169,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "error_br1 = br1.reconstruction_error()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br2 = BundleReducer(\"pca\", 2)\n",
+    "br2.impute(dki_fa)\n",
+    "br2.fit(dki_fa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br2.plot_comparison()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error_br2 = br2.reconstruction_error()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# svd spectrum "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -186,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
