adding more dimensions

--- a/BundleReducer.ipynb
+++ b/BundleReducer.ipynb
@@ -40,15 +40,15 @@
     "        self.data_imp_ = imputer.fit_transform(X)\n",
     "    \n",
     "    def fit(self, X):\n",
-    "        if self.reduction_type.lower() == \"nmf\":\n",
-    "            nmf = NMF(n_components=self.ndimensions, init='random', random_state=0)\n",
-    "            self.model_ =  nmf.fit_transform(self.data_imp_)\n",
-    "            self.components_ = nmf.components_\n",
+    "        clf = self.reduction_type.lower();\n",
+    "        \n",
+    "        if clf == \"nmf\":\n",
+    "            self.clf_ = NMF(n_components=self.ndimensions, init='random', random_state=0)\n",
+    "        elif clf == \"pca\" :\n",
+    "            self.clf_ = PCA(n_components=self.ndimensions)\n",
     "            \n",
-    "        elif self.reduction_type.lower() == \"pca\" :\n",
-    "            pca = PCA(n_components=self.ndimensions)\n",
-    "            self.model_ =  pca.fit_transform(data_imp)\n",
-    "            self.components_ = pca.components_\n",
+    "        self.model_ =  self.clf_.fit_transform(self.data_imp_)\n",
+    "        self.components_ = self.clf_.components_\n",
     "       \n",
     "        return self\n",
     "\n",
@@ -56,22 +56,24 @@
     "    def reconstruct(self): \n",
     "        #[x, H] = model;\n",
     "        check_is_fitted(self, 'components_')\n",
-    "        reconstruction = self.model_@self.components_;\n",
-    "        return reconstruction\n",
+    "        # self.recon_ = self.model_@self.components_;\n",
+    "        self.recon_ = self.clf_.inverse_transform(self.model_)\n",
+    "#         return reconstruction\n",
     "    \n",
     "    def plot_comparison(self):\n",
     "        fig, ax = plt.subplots();\n",
-    "        recon = self.model_@self.components_;\n",
-    "        mean = np.mean(recon, axis = 0);\n",
+    "#         recon = self.model_@self.components_;\n",
+    "        mean = np.mean(self.recon_, axis = 0);\n",
     "        data_mean = np.mean(self.data_imp_, axis = 0);\n",
     "        ax.plot(mean);\n",
     "        ax.plot(data_mean)\n",
     "        \n",
     "    def reconstruction_error(self): \n",
-    "#         [x, H] = fit(self, X);\n",
-    "#         data_imp = imputer.fit_transform(X);\n",
-    "        for i in len(X):\n",
-    "            loss = np.sqrt(np.mean(((self.model[i, :]@self.components)-self.data_imp_[i, :])**2))\n",
+    "\n",
+    "        loss = np.zeros(len(self.data_imp_));\n",
+    "        for i in range(len(self.data_imp_)):\n",
+    "#             loss[i] = np.sqrt(np.mean(((self.recon_[i, :])-self.data_imp_[i, :])**2))\n",
+    "             loss[i] = np.sqrt(np.mean(((self.recon_[i, :])-self.data_imp_[i, :])**2))\n",
     "        return loss\n",
     "        # XXX \n",
     "        "
@@ -105,8 +107,15 @@
    "source": [
     "dki_fa = data.X[:, 0:1800]\n",
     "dki_md = data.X[:, 1801:3600]\n",
-    "dti_fa = data.X[:, 0:1800]\n",
-    "dki_md = data.X[:, 1801:3600]"
+    "# dti_fa = data.X[:, 0:1800]\n",
+    "# dki_md = data.X[:, 1801:3600]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NMF with 2 dimensions (dki_fa)"
    ]
   },
   {
@@ -115,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "br1 = BundleReducer(\"NMF\", 2)"
+    "br1 = BundleReducer(\"NMF\", 15)"
    ]
   },
   {
@@ -151,6 +160,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.plot(br1.data_imp_[1, :])\n",
+    "plt.plot(br1.recon_[1, :])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sqrt(np.mean((br1.data_imp_[1, :]-br1.recon_[1, :])**2)) # 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sqrt(np.mean((br1.data_imp_[1, :]-br1.recon_[1, :])**2)) # 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sqrt(np.mean((br1.data_imp_[1, :]-br1.recon_[1, :])**2)) # 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "br1.components_"
    ]
   },
@@ -169,7 +215,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "error_br1 = br1.reconstruction_error()"
+    "error_br1 = br1.reconstruction_error()\n",
+    "error_br1.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NMF with 3 dimensions (dki_fa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br3 = BundleReducer(\"nmf\", 3)\n",
+    "br3.impute(dki_fa)\n",
+    "br3.fit(dki_fa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rec_dki_fa = br3.reconstruct()\n",
+    "br3.plot_comparison()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error_br3 = br3.reconstruction_error()\n",
+    "np.mean(error_br3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NMF with 3 dimensions (dki_fa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br5 = BundleReducer(\"nmf\", 5)\n",
+    "br5.impute(dki_fa)\n",
+    "br5.fit(dki_fa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rec_dki_fa = br5.reconstruct()\n",
+    "br5.plot_comparison()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PCA with 2 dimensions (dki_fa)"
    ]
   },
   {
@@ -180,7 +300,8 @@
    "source": [
     "br2 = BundleReducer(\"pca\", 2)\n",
     "br2.impute(dki_fa)\n",
-    "br2.fit(dki_fa)"
+    "br2.fit(dki_fa)\n",
+    "rec_dki_fa = br2.reconstruct()"
    ]
   },
   {
@@ -198,7 +319,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "error_br2 = br2.reconstruction_error()"
+    "error_br2 = br2.reconstruction_error()\n",
+    "np.mean(error_br2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PCA with 3 dimensions (dki_fa)"
    ]
   },
   {
@@ -207,8 +336,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# svd spectrum "
+    "br4 = BundleReducer(\"pca\", 3)\n",
+    "br4.impute(dki_fa)\n",
+    "br4.fit(dki_fa)\n",
+    "rec_dki_fa = br4.reconstruct()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br4.plot_comparison()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error_br4 = br4.reconstruction_error()\n",
+    "np.mean(error_br4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
