--- a/BundleReducer.ipynb
+++ b/BundleReducer.ipynb
@@ -151,7 +151,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rec_dki_fa = br1.reconstruct()"
+    "rec_dki_fa_1 = br1.reconstruct()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### analysis for each individual participant"
    ]
   },
   {
@@ -243,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rec_dki_fa = br3.reconstruct()\n",
+    "rec_dki_fa_3 = br3.reconstruct()\n",
     "br3.plot_comparison()"
    ]
   },
@@ -261,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NMF with 3 dimensions (dki_fa)"
+    "## NMF with 5 dimensions (dki_fa)"
    ]
   },
   {
@@ -281,8 +288,148 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rec_dki_fa = br5.reconstruct()\n",
+    "rec_dki_fa_5 = br5.reconstruct()\n",
     "br5.plot_comparison()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_dim = [6, 8, 10]\n",
+    "br = np.zeros(3)\n",
+    "rec = np.zeros(3)\n",
+    "for i in num_dim:\n",
+    "    ind = index(i);\n",
+    "    br[ind] = BundleReducer(\"nmf\", i)\n",
+    "    br[ind].impute(dki_fa)\n",
+    "    br[ind].fit(dki_fa)\n",
+    "    rec[ind] = br[ind].reconstruct()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def diff_bundles(data_imp, data_recon, sample):\n",
+    "    \n",
+    "    diff_bundle = np.zeros(18)\n",
+    "    for i in range(18):\n",
+    "        ind = 100*i;\n",
+    "        ind1 = ind +100;\n",
+    "        diff_bundle[i] = np.sqrt(np.mean((data_imp[sample, ind:ind1]-data_recon[sample, ind:ind1])**2))\n",
+    "        \n",
+    "    diff = np.zeros([641, 18])\n",
+    "    \n",
+    "    return diff_bundle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff_2 = np.zeros([641, 18])\n",
+    "for i in range(641):\n",
+    "    diff_2[i, :] = diff_bundles(br1.data_imp_, br1.recon_, i)\n",
+    "diff_2 = diff_2.mean(axis = 0)\n",
+    "diff_3 = np.zeros([641, 18])\n",
+    "for i in range(641):\n",
+    "    diff_3[i, :] = diff_bundles(br3.data_imp_, br3.recon_, i)\n",
+    "diff_3 = diff_3.mean(axis = 0)\n",
+    "diff_5 = np.zeros([641, 18])\n",
+    "for i in range(641):\n",
+    "    diff_5[i, :] = diff_bundles(br5.data_imp_, br5.recon_, i)\n",
+    "diff_5 = diff_5.mean(axis = 0)\n",
+    "diff_6 = np.zeros([641, 18])\n",
+    "for i in range(641):\n",
+    "    diff_6[i, :] = diff_bundles(br6.data_imp_, br6.recon_, i)\n",
+    "diff_6 = diff_6.mean(axis = 0)\n",
+    "diff_8 = np.zeros([641, 18])\n",
+    "for i in range(641):\n",
+    "    diff_8[i, :] = diff_bundles(br8.data_imp_, br8.recon_, i)\n",
+    "diff_8 = diff_8.mean(axis = 0)\n",
+    "diff_10 = np.zeros([641, 18])\n",
+    "for i in range(641):\n",
+    "    diff_10[i, :] = diff_bundles(br10.data_imp_, br10.recon_, i)\n",
+    "diff_10 = diff_10.mean(axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff = np.reshape(np.array([diff_2, diff_3, diff_5, diff_6, diff_8, diff_10]), (6, 18));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "# data = np.random.randn(100)\n",
+    "\n",
+    "# scaled_data = np.zeros((10, data.shape[0]))\n",
+    "# for ii in range(1, 11): \n",
+    "#     scaled_data[ii-1] = data / ii\n",
+    "\n",
+    "# scaled_data.shape\n",
+    "\n",
+    "p = sns.color_palette(\"rocket\", n_colors=6)\n",
+    "ind = [2, 3, 5, 6, 8, 10]\n",
+    "for dd in range(diff.shape[0]):\n",
+    "    \n",
+    "    plt.plot(diff[dd], color=p[dd], label = ind[dd])\n",
+    "    plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaled_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# take average for coefficient for ddiferent components"
    ]
   },
   {
@@ -359,6 +506,127 @@
    "source": [
     "error_br4 = br4.reconstruction_error()\n",
     "np.mean(error_br4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(br4.data_imp_[1, :])\n",
+    "plt.plot(br4.recon_[1, :])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sqrt(np.mean((br4.data_imp_[1, :]-br4.recon_[1, :])**2)) # 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sqrt(np.mean((br4.data_imp_[1, :100]-br4.recon_[1, :100])**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sqrt(np.mean((br4.data_imp_[1, 100:200]-br4.recon_[1, 100:200])**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sqrt(np.mean((br4.data_imp_[1, 1000:1100]-br4.recon_[1, 1000:1100])**2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def diff_bundles(data_imp, data_recon, sample):\n",
+    "    \n",
+    "    diff_bundle = np.zeros(18)\n",
+    "    for i in range(18):\n",
+    "        ind = 100*i;\n",
+    "        ind1 = ind +100;\n",
+    "        diff_bundle[i] = np.sqrt(np.mean((data_imp[sample, ind:ind1]-data_recon[sample, ind:ind1])**2))\n",
+    "    return diff_bundle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff = np.zeros([641, 18])\n",
+    "for i in range(641):\n",
+    "    diff[i, :] = diff_bundles(br4.data_imp_, br4.recon_, i)\n",
+    "diff = diff.mean(axis = 0)\n",
+    "plt.plot(diff.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diff = np.zeros([641, 18])\n",
+    "for i in range(641):\n",
+    "    diff[i, :] = diff_bundles(br1.data_imp_, br1.recon_, i)\n",
+    "diff = diff.mean(axis = 0)\n",
+    "plt.plot(diff.T)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "seaborn continuous color pallete for different dimension lone\n",
+    "different n dimeniosn in one graph\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "data = np.random.randn(100)\n",
+    "\n",
+    "scaled_data = np.zeros((10, data.shape[0]))\n",
+    "for ii in range(1, 11): \n",
+    "    scaled_data[ii-1] = data / ii\n",
+    "\n",
+    "scaled_data.shape\n",
+    "\n",
+    "p = sns.color_palette(\"rocket\", n_colors=10)\n",
+    "\n",
+    "for dd in range(scaled_data.shape[0]):\n",
+    "    plt.plot(scaled_data[dd], color=p[dd])"
    ]
   },
   {
